--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,27 @@
     transform: rotate(360deg);
   }
 }
+
+/*
+
+.table-style {
+  table {
+    width: 100%;
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  th {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 15px;
+    text-align: left;
+  }
+  td {
+    border: 1px solid black;
+    padding: 15px;
+    text-align: left;
+    border-collapse: collapse;
+  }
+}
+
+*/
